class KitchenProcessingPanel:
    def __init__(self):
        print("Need to add GUI")

    def _list_pending(self):  # protected method
        print("Based on database data list pending orders")

    def _mark_item_ready(self):  # protected method
        print("marking an item in a selected order ready")

    def _mark_order_in_progress(self):  # protected method
        print("Marking an order in progress, taking it on")
