from POS_app.business.Items import Order


class OrderCreationPanel:
    def __init__(self):
        print("Need to implement Gui")

    # those methods will probably be callbacks from buttons/panels that need to be initiated
    def _start_order(self):  # protected method
        print("Starting an order")

    def _add_product(self):  # protected method
        print("Adding a product to the order")

    def _set_takeaway(self):  # protected method
        print("Setting that this order is a takeaway")

    def _confirm(self):  # protected method
        print("Confirming something???")

    def _set_serving_sequence(self):  # protected method
        print("setting a serving sequence for an order")
