import Actors.User as User
import Items.Report as Report
import Items.Order as Order
# inheritance


class Manager(User.User):
    def __init__(self):
        print("Manager")

    def _manage_menu(self):  # protected method
        print("managing the menu")

    def _generate_report(self) -> Report.Report:  # protected method
        print("Generating")
        report = Report.Report(0, 0, 0, 0, 0)  # placeholders
        return report

    def _view_archived_orders(self) -> list[Order.Order]:  # protected method
        print("Viewing")
        # add menuService here!
        # incorporate database viewing
